fix(styles): change align-items property value from 'start' to 'flex-start' in Recipe.module.css

--- a/src/styles/Recipe.module.css
+++ b/src/styles/Recipe.module.css
@@ -146,7 +146,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
   padding: 0;
 }
 .instructions li {
